--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 body {
     height: 100vh;
-    background-image: linear-gradient( to bottom left, rgb(255, 255, 255),rgb(227, 228, 235));
+    background-image: linear-gradient( to bottom left, rgb(255, 255, 255),rgb(218, 220, 233));
 }
 
 .header {
@@ -39,26 +39,23 @@ body {
 }
 
 input {
-    margin: 8px 0;
+    margin: 5px 0;
     padding: 2px 0;
+    
 }
 
 #forgotten-pswd {
-    color: rgba(215, 215, 215, 0.543);
+    color: rgb(130, 130, 130);
 }
 
 #login-btn {
     position: absolute;
     right: 147px;
-    top: 40px;
+    top: 37px;
     padding: 2px 4px;
     color: white;
     border: 1px solid #464646;
     background-color: #3a5faa;
-}
-.main-section {
-
-    background-color: black;
 }
 .left-section {
     position: absolute;
@@ -70,3 +67,47 @@ input {
 #left-image, #left-paragraph {
     width: 80%;
 }
+.right-section {
+    font-size: 1.3rem;
+    position: absolute;
+    /* width: 800px; */
+    top: 150px;
+    left: 60vw;
+    color: rgba(0, 0, 0, 0.792);
+    
+}
+table tr td input {
+    border: 1px solid #959595;
+    padding: 5px;
+    font-size: 1rem;
+    width: 100%;
+    
+}
+.warning-msg {
+    font-size: 10px;
+    width: 270px;
+}
+ span {
+    color: #0051f4;
+ }
+ #sign-up-btn {
+    color: white;
+    background-color: rgb(53, 142, 53);
+    border: 1px solid rgb(53, 53, 53);
+    border-radius:8px ;
+    padding: 8px 60px;
+    font-size: 1.2rem;
+    box-shadow: inset 0 0 5px rgb(255, 255, 255);
+ }
+
+ .birthday, .gender, .warning-msg {
+    margin: 12px 0;
+    
+ }
+ .details {
+    color: #7e7e7e;
+    font-size: 1rem;
+ }
+ .gender {
+    font-size: 14px;
+ }
