--- a/index.css
+++ b/index.css
@@ -111,3 +111,12 @@ table tr td input {
  .gender {
     font-size: 14px;
  }
+ i {
+    font-size: small;
+    border: 1px transparent;
+    background: #7a7a7a;
+    border-radius: 50%;
+    padding: 2px 5px;
+    margin-left: 10px;
+
+ }
